--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,7 +51,7 @@ textarea {
 }
 
 button[type="submit"] {
-  background-color: #4CAF50;
+  background: linear-gradient(135deg, #526d58, #3ec05a);
   color: white;
   padding: 12px;
   border: none;
@@ -71,7 +71,7 @@ button[type="submit"]:active {
 }
 
 .button {
-  background-color: #007BFF;
+  background: linear-gradient(135deg, #3b4492, #173d69);
   color: white;
   padding: 12px;
   border: none;
